---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : fcn _() : 1..0"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of function ( ) -> range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 19..23: element range is too small
| note in file FileId(1) for 19..23: computed range size is 0
| error in file FileId(1) for 19..23: zero sized ranges cannot be used in `function` types
